# OOP_IDZ1

./: CMakeLists.txt
originalSource/: GETBIN.cpp  LOGICA16.cpp  OTVET16.cpp
task2/: GETBIN32.cpp  INSTRUCT.cpp  LOGICA16.cpp  LOGICA32.cpp  OTVET32.cpp
task3/: LOGICA16.cpp  LOGICA32.cpp
task4/item1/: LOGICA32.cpp
task4/item2/: GETBIN32.cpp  LOGICA32.cpp  OTVET32.cpp
task4/item3/: GETBIN32.cpp  LOGICA32.cpp  OTVET32.cpp
task5/item1/: LOGICA32.cpp
task5/item2/: GETBIN32.cpp  LOGICA32.cpp  OTVET32.cpp
task6/: GETBIN32.cpp  INSTRUCT.cpp  LOGICA32.cpp  OTVET32.cpp
task7/: GETBIN32.cpp  LOGICA32.cpp  OTVET32.cpp
task8/: GETBIN32.cpp  LOGICA32.cpp  OTVET32.cpp
task9/: LOGIKA.cpp  LOGIKA.h  Main.cpp  OutPrinter.cpp  OutPrinter.h  Task.cpp  Task.h
